--- a/wishList/index.html
+++ b/wishList/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/wishList/style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper" id="main">
       <header>
         <div class="heading" role="heading" tabindex="-1">
           <h4>My Wishlist</h4>
@@ -22,13 +22,15 @@
         </div>
       </header>
       <div class="wishList" id="wishList">
-        <div class="list" id="list1">
-          <span class="delete"><i class="fa-light fa-xmark-large"></i></span>
+        <div class="list" id="myWishList">
+          <div id="delete-list">
+            <span id="delete">&times;</span>
+          </div>
           <div class="listContent">
             <figure>
               <img
-              src="https://yankeecandle.scene7.com/is/image//YankeeCandle/1631778"
-              loading="lazy" width:="100px" height="95px">
+              src="https://pupsik.sg/media/catalog/product/cache/44bd3fdaa27de03cf1d4d857832e2b29/w/i/winternn.jpg"
+              loading="lazy" width:="98px" height="95px">
               <figcaption>
                 <span class="wishTitle"
                   >Yankee Candle Medium Jar - Torquoise Sky
@@ -45,7 +47,10 @@
             </div>
           </div>
         </div>
-        <div class="list" id="list2">
+        <div class="list"  id="myWishList">
+          <div id="delete-list">
+            <span id="delete">&times;</span>
+          </div>
           <div class="listContent">
             <figure>
               <img src="https://m.media-amazon.com/images/I/51VYTK63-HL.jpg"
@@ -67,7 +72,10 @@
             </div>
           </div>
         </div>
-        <div class="list" class="list3">
+        <div class="list"  id="myWishList">
+          <div id="delete-list">
+            <span id="delete">&times;</span>
+          </div>
           <div class="listContent">
             <figure>
               <img
@@ -92,5 +100,6 @@
         </div>
       </div>
     </div>
+    <script src="/wishList/script.js"></script>
   </body>
 </html>
