--- a/quizApp/index.html
+++ b/quizApp/index.html
@@ -14,24 +14,36 @@
     <div class="container">
         <div class="options">
             <div class="answers" role="heading">
-                <span><i class=""></i>2 Correct</span>
-                <span><i class=""></i>1 Wrong</span>
+                <span><i class="fa-solid fa-check"></i>2 Correct</span>
+                <span><i class="fa-solid fa-xmark"></i>1 Wrong</span>
             </div>
             <div class="timer">
-                <span><i class=""></i>25:05</span>
+                <span><i class="fa-regular fas fa-clock"></i>25:05</span>
             </div>
         </div>
-        <div class="quiz-card">
-            <div class="questions">
+        <div class="quiz-box">
+            <div class="quiz-card">
+                <div class="questionSection">
+                    <span>Question 1 (14 remaining)</span>
+                    <p id="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quam corrupti libero aut magnam beatae odit iusto.</p>
+                </div>
+                <div class="answerSection">
+                    <span>Answer options</span>
+                    <ul>
+                        <li><span>A</span>Venimu Remia Timoari</li>
+                        <li><span>B</span>Timury Emaiy Romio</li>
+                        <li><span>C</span>Cassano Vicenso Rin</li>
 
+                    </ul>
+                </div>
             </div>
-            <div class="answers">
-
-            </div>
-            <div class="ans-button">
-                
+            <div class="answers-btn">
+                <button id="ansLater">Answer Later</button>
+                <button id="sendAnswer">Send Answer</button>
             </div>
         </div>
+
+       
     </div>
 </body>
 </html>
