--- a/followersProfile/index.html
+++ b/followersProfile/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <script src="https://kit.fontawesome.com/340305d5ca.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -25,7 +26,7 @@
           </div>
           <div class="buttons">
             <button><i class="fa-regular fa-comment"></i>Message</button>
-            <button class="follow-btn"><i class="fa-regular fas fa-cross"></i></button>
+            <button class="follow-btn"><i class="fa-solid fa-plus fa-beat-fade fa-sm"></i></button>
           </div>
         </div>
       </div>
@@ -33,7 +34,7 @@
       <div class="secondFollower" id="followers">
         <div class="user-image">
           <img
-            src="https://images.unsplash.com/photo-1548637724-cbc39e0c8d3b?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
           />
         </div>
         <div class="info">
@@ -43,7 +44,7 @@
           </div>
           <div class="buttons" id="button">
             <button><i class="fa-regular fa-comment" ></i>Message</button>
-            <button class="follow-btn"><i class="fa-regular fas fa-cross "></i></button>
+            <button class="follow-btn"><i class="fa-solid fa-plus fa-beat-fade fa-sm"></i></button>
           </div>
         </div>
       </div>
@@ -61,7 +62,7 @@
           </div>
           <div class="buttons">
             <button><i class="fa-regular fa-comment"></i>Message</button>
-            <button class="follow-btn"><i class="fa-regular fas fa-cross"></i></button>
+            <button class="follow-btn"><i class="fa-solid fa-plus fa-beat-fade fa-sm"></i></button>
           </div>
         </div>
       </div>
