--- a/planSubsription/index.html
+++ b/planSubsription/index.html
@@ -10,102 +10,124 @@
   <body>
     <div class="pricingContainer">
       <div class="planCard" id="freelancerCard" >
-        <div class="heading" role="header" aria-labelledby="pricing">
-          <h2 class="pricing">$9<small>/mo</small></h2>
-          <aside>Freelancer</aside>
+        <div class="upperCard">
+          <div class="price">
+            <h2 class="pricing">$9<small>/mo</small></h2>
+            <span>Freelancer</span>
+          </div>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-1)" fill-opacity="1"
+                  d="M0,256L40,250.7C80,245,160,235,240,192C320,149,400,75,480,74.7C560,75,640,149,720,192C800,235,880,245,960,218.7C1040,192,1120,128,1200,133.3C1280,139,1360,213,1400,250.7L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-2)" fill-opacity="1"
+                  d="M0,64L26.7,106.7C53.3,149,107,235,160,245.3C213.3,256,267,192,320,170.7C373.3,149,427,171,480,192C533.3,213,587,235,640,224C693.3,213,747,171,800,133.3C853.3,96,907,64,960,85.3C1013.3,107,1067,181,1120,186.7C1173.3,192,1227,128,1280,117.3C1333.3,107,1387,149,1413,170.7L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-3-card)" fill-opacity="1"
+                  d="M0,128L40,122.7C80,117,160,107,240,128C320,149,400,203,480,192C560,181,640,107,720,96C800,85,880,139,960,176C1040,213,1120,235,1200,224C1280,213,1360,171,1400,149.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+          </div>
         </div>
-        <div class="benefits">
-          <svg
-            width="100%"
-            height="100%"
-            id="svg"
-            viewBox="0 0 1440 690"
-            xmlns="http://www.w3.org/2000/svg"
-            class="transition duration-300 ease-in-out delay-150"
-          >
-            <path
-              d="M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
-              stroke="none"
-              stroke-width="0"
-              fill="#0e0e0e"
-              fill-opacity="12"
-              class="transition-all duration-300 ease-in-out delay-150 path-1"
-            ></path>
-          </svg>
-          <ul>
-            <li>1GB of space</li>
-            <li>Ulimited traffic</li>
-            <li>forum access</li>
-            <li>Support at $25/hour</li>
-          </ul>
-          <button>Choose Plan</button>
-        </div>
+        <ul class="features">
+          <li>1GB of space</li>
+          <li>Ulimited traffic</li>
+          <li>forum access</li>
+          <li>Support at $25/hour</li>
+        </ul>
+        <button class="choose-btn">Choose Plan</button>
       </div>
-      <div class="planCard" id="businessCard">
-        <div class="heading" role="header" aria-labelledby="pricing">
-          <h2 class="pricing">$99<small>/mo</small></h2>
-          <aside>Business</aside>
+      <!-- Business Card -->
+      <div class="planCard" id="businessCard" >
+        <div class="upperCard">
+          <div class="price">
+            <h2 class="pricing">$59<small>/mo</small></h2>
+            <span>Business</span>
+          </div>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-1)" fill-opacity="1"
+                  d="M0,256L40,250.7C80,245,160,235,240,192C320,149,400,75,480,74.7C560,75,640,149,720,192C800,235,880,245,960,218.7C1040,192,1120,128,1200,133.3C1280,139,1360,213,1400,250.7L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-2)" fill-opacity="1"
+                  d="M0,64L26.7,106.7C53.3,149,107,235,160,245.3C213.3,256,267,192,320,170.7C373.3,149,427,171,480,192C533.3,213,587,235,640,224C693.3,213,747,171,800,133.3C853.3,96,907,64,960,85.3C1013.3,107,1067,181,1120,186.7C1173.3,192,1227,128,1280,117.3C1333.3,107,1387,149,1413,170.7L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-3-card)" fill-opacity="1"
+                  d="M0,128L40,122.7C80,117,160,107,240,128C320,149,400,203,480,192C560,181,640,107,720,96C800,85,880,139,960,176C1040,213,1120,235,1200,224C1280,213,1360,171,1400,149.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+          </div>
         </div>
-        <div class="benefits">
-          <svg
-            width="100%"
-            height="100%"
-            id="svg"
-            viewBox="0 0 1440 690"
-            xmlns="http://www.w3.org/2000/svg"
-            class="transition duration-300 ease-in-out delay-150"
-          >
-            <path
-              d="M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
-              stroke="none"
-              stroke-width="0"
-              fill="#0e0e0e"
-              fill-opacity="12"
-              class="transition-all duration-300 ease-in-out delay-150 path-1"
-            ></path>
-          </svg>
-          <ul>
-            <li>5GB of space</li>
-            <li>Ulimited traffic</li>
-            <li>forum access</li>
-            <li>Support at $5/hour</li>
-          </ul>
-          <button>Choose Plan</button>
-        </div>
+        <ul class="features">
+          <li>5 GB of space</li>
+          <li>Unlimited traffic</li>
+          <li>Forum accesss</li>
+          <li>Support at $25/hour</li>
+        </ul>
+        <button class="choose-btn">Choose Plan</button>
       </div>
-      <div class="planCard" id="enterpriseCard">
-        <div class="heading" role="header" aria-labelledby="pricing">
-          <h2 class="pricing">$499<small>/mo</small></h2>
-          <aside>Enterprise</aside>
+      <!-- Enterprise Card -->
+      <div class="planCard" id="enterpriseCard" >
+        <div class="upperCard">
+          <div class="price">
+            <h2 class="pricing">$499<small>/mo</small></h2>
+            <span>Enterprise</span>
+          </div>
+          <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-1)" fill-opacity="1"
+                  d="M0,256L40,250.7C80,245,160,235,240,192C320,149,400,75,480,74.7C560,75,640,149,720,192C800,235,880,245,960,218.7C1040,192,1120,128,1200,133.3C1280,139,1360,213,1400,250.7L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-2)" fill-opacity="1"
+                  d="M0,64L26.7,106.7C53.3,149,107,235,160,245.3C213.3,256,267,192,320,170.7C373.3,149,427,171,480,192C533.3,213,587,235,640,224C693.3,213,747,171,800,133.3C853.3,96,907,64,960,85.3C1013.3,107,1067,181,1120,186.7C1173.3,192,1227,128,1280,117.3C1333.3,107,1387,149,1413,170.7L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
+              </path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path stroke-width="3" fill="var(--bg-wave-3-card)" fill-opacity="1"
+                  d="M0,128L40,122.7C80,117,160,107,240,128C320,149,400,203,480,192C560,181,640,107,720,96C800,85,880,139,960,176C1040,213,1120,235,1200,224C1280,213,1360,171,1400,149.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+              </path>
+            </svg>
+          </div>
         </div>
-        <div class="benefits">
-          <svg
-            width="100%"
-            height="100%"
-            id="svg"
-            viewBox="0 0 1440 690"
-            xmlns="http://www.w3.org/2000/svg"
-            class="transition duration-300 ease-in-out delay-150"
-          >
-            <path
-              d="M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
-              stroke="none"
-              stroke-width="0"
-              fill="#0e0e0e"
-              fill-opacity="12"
-              class="transition-all duration-300 ease-in-out delay-150 path-1"
-            ></path>
-          </svg>
-          <ul>
-            <li>1GB of space</li>
-            <li>Ulimited traffic</li>
-            <li>forum access</li>
-            <li>Support at $25/hour</li>
-          </ul>
-          <button>Choose Plan</button>
-        </div>
+        <ul class="features">
+          <li>20 GB of space</li>
+          <li>Unlimited traffic</li>
+          <li>Forum access</li>
+          <li>Free support</li>
+        </ul>
+        <button class="choose-btn">Choose Plan</button>
       </div>
-      
     </div>
   </body>
 </html>
+
+<!-- <div class="benefits">
+  <svg
+    width="100%"
+    height="100%"
+    id="svg"
+    viewBox="0 0 1440 690"
+    xmlns="http://www.w3.org/2000/svg"
+    class="transition duration-300 ease-in-out delay-150"
+  >
+    <path
+      d="M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
+      stroke="none"
+      stroke-width="0"
+      fill="#0e0e0e"
+      fill-opacity="12"
+      class="transition-all duration-300 ease-in-out delay-150 path-1"
+    ></path>
+  </svg>
+ 
+</div> -->
