--- a/planSubsription/PricingCard2/index.html
+++ b/planSubsription/PricingCard2/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subscribe</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/planSubsription/PricingCard2/style.css" />
   </head>
   <style></style>
   <body>
@@ -33,19 +37,22 @@
             </svg>
           </div>
         </div>
-        <ul class="features">
-          <li>1GB of space</li>
-          <li>Ulimited traffic</li>
-          <li>forum access</li>
-          <li>Support at $25/hour</li>
-        </ul>
-        <button class="choose-btn">Choose Plan</button>
+        <div class="lowerCard">
+          <ul class="features">
+            <li>1GB of space</li>
+            <li>Unlimited traffic</li>
+            <li>Forum access</li>
+            <li>Support at $25/hour</li>
+          </ul>
+          <button class="choose-btn"><span>Choose Plan</span></button>
+        </div>
+       
       </div>
       <!-- Business Card -->
       <div class="planCard" id="businessCard" >
         <div class="upperCard">
           <div class="price">
-            <h2 class="pricing">$59<small>/mo</small></h2>
+            <h2 class="pricing">$68<small>/mo</small></h2>
             <span>Business</span>
           </div>
           <div class="wave">
@@ -66,13 +73,15 @@
             </svg>
           </div>
         </div>
-        <ul class="features">
-          <li>5 GB of space</li>
-          <li>Unlimited traffic</li>
-          <li>Forum accesss</li>
-          <li>Support at $25/hour</li>
-        </ul>
-        <button class="choose-btn">Choose Plan</button>
+        <div class="lowerCard">
+          <ul class="features">
+            <li>5 GB of space</li>
+            <li>Unlimited traffic</li>
+            <li>Forum accesss</li>
+            <li>Support at $25/hour</li>
+          </ul>
+          <button class="choose-btn"><span>Choose Plan</span></button>
+        </div>
       </div>
       <!-- Enterprise Card -->
       <div class="planCard" id="enterpriseCard" >
@@ -99,35 +108,17 @@
             </svg>
           </div>
         </div>
-        <ul class="features">
-          <li>20 GB of space</li>
-          <li>Unlimited traffic</li>
-          <li>Forum access</li>
-          <li>Free support</li>
-        </ul>
-        <button class="choose-btn">Choose Plan</button>
+        <div class="lowerCard">
+          <ul class="features">
+            <li>20 GB of space</li>
+            <li>Unlimited traffic</li>
+            <li>Forum access</li>
+            <li>Support $20/hour</li>
+          </ul>
+          <button class="choose-btn"><span>Choose Plan</span></button>
+        </div>
       </div>
     </div>
   </body>
 </html>
 
-<!-- <div class="benefits">
-  <svg
-    width="100%"
-    height="100%"
-    id="svg"
-    viewBox="0 0 1440 690"
-    xmlns="http://www.w3.org/2000/svg"
-    class="transition duration-300 ease-in-out delay-150"
-  >
-    <path
-      d="M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
-      stroke="none"
-      stroke-width="0"
-      fill="#0e0e0e"
-      fill-opacity="12"
-      class="transition-all duration-300 ease-in-out delay-150 path-1"
-    ></path>
-  </svg>
- 
-</div> -->
