--- a/reminderApp/reminderApp.html
+++ b/reminderApp/reminderApp.html
@@ -12,7 +12,7 @@
             <div class="search">
                 <input type="text" placeholder="Search">
             </div>
-            <div class="menu_list">
+            <div class="menuList">
                 <ul class="side-bar" id="menu">
                     <li>Reminders <span class="contentNo">2</span></li>
                     <li class="active">To Do List <span class="contentNo">5</span></li>
@@ -26,14 +26,14 @@
             <div class="reminders list">
                 <div class="firstReminder">
                     <h3 class="rHeading" role="heading">Reminders</h3>
-                    <ul id="content">
+                    <ul id="content"  class="content">
                         <li class="checked">Wash Your Plates</li>
                         <li>Read the book titled "Living Great"</li>
                     </ul>
                 </div>
                 <div class="secondReminder">
                     <h3 class="rHeading"  role="heading">Important</h3>
-                    <ul id="content">
+                    <ul id="content"  class="content">
                         <li>Order for Light and Cottons top</li>
                         <li>Get Konkere design rading table</li>
                         <li class="checked">Play ball with Chelsea fans</li>
@@ -45,7 +45,7 @@
             <div class="todoList list">
                 <div class="firstReminder">
                     <h3 class="rHeading" role="heading">Reminders </h3>
-                    <ul class="content">
+                    <ul class="content"  class="content">
                         <li class="checked">Sleep</li>
                         <li>Practice Yoga</li>
                         <li class="checked">Take a shower</li>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="secondReminder">
                     <h3 class="rHeading" role="heading">Treat with importance</h3>
-                    <ul id="content">
+                    <ul id="content" class="content">
                         <li class="checked">Go through your WhatsApp message</li>
                         <li>Read your YouVersion Devotion</li>
                         <li>Work on your Javascript</li>
@@ -65,7 +65,7 @@
             <div class="shopping list">
                 <div class="firstReminder">
                     <h3 class="rHeading">Groceries</h3>
-                    <ul id="content">
+                    <ul id="content"  class="content">
                         <li>Youghurt</li>
                         <li class="checked">Vegetables</li>
                         <li class="checked">Corn flakes</li>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="secondReminder">
                     <h3 class="rHeading">Fruit</h3>
-                    <ul id="content">
+                    <ul id="content"  class="content">
                         <li>Apples</li>
                         <li>Orange</li>
                         <li class="checked">Banana</li>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="secondReminder">
                     <h3 class="rHeading">Books</h3>
-                    <ul id="content">
+                    <ul id="content" class="content">
                         <li>Living Good</li>
                         <li>Prosperity</li>
                         <li class="checked">Enjoying life</li>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="thirdReminder">
                     <h3 class="rHeading">Important</h3>
-                    <ul id="content">
+                    <ul id="content"  class="content">
                         <li>Attend Devfest 2029</li>
                         <li class="checked">Watch Youtube Video on The Experience</li>
                         <li class="checked">Read a book</li>
@@ -118,5 +118,6 @@
     </div>
 
     <script src="./remiderApp.js"></script>
+    
   </body>
 </html>
